# coze_ws_app_weixue

./: .gitignore  README_CN.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
components/common/: esp_gmf_gpio_config.h  esp_gmf_setup_peripheral.c  esp_gmf_setup_peripheral.h  esp_gmf_setup_pool.c
components/driver/: CMakeLists.txt
components/esp_lcd/: CMakeLists.txt
components/esp_lcd/include/: esp_lcd_io_i2c.h
components/ui/: CMakeLists.txt  filelist.txt  readme.md  ui.c  ui.h  ui_events.c  ui_events.h
components/ui/fonts/: ui_font_dinglie32.c
components/ui/images/: ui_img_1706436910136_b31bcb12_png.c  ui_img_1706437145276_8acdec45_png.c
components/ui/screens/: ui_Main.c  ui_Main1.c  ui_Screen1.c  ui_Screen1.h
lvgl_8.3/: SquareLine_Project.sll  SquareLine_Project.spj
lvgl_8.3/assets/: ui_font_battery.fcfg  ui_font_dinglie16.c  ui_font_dinglie16.fcfg  ui_font_dinglie32.c  ui_font_dinglie32.fcfg  ui_font_headPortrait.fcfg  ui_font_network.fcfg  ui_font_status.c  ui_font_status.fcfg
lvgl_8.3/components/: TextArea2.ecomp
lvgl_8.3/doc/status/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
lvgl_8.3/doc/头像/font_4946252_mc0utesasn/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
lvgl_8.3/doc/状态/font_4946252_eg192kna9h5/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
main/: CMakeLists.txt  Kconfig.projbuild  audio_processor.c  audio_processor.h  coze_chat_app.c  http_server.c  idf_component.yml  main.c  wifi_manager.c  wifi_manager.h
spiffs/: index.html
(+8 files in other folders)
